--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "tomotetra",
   "license": "MIT",
   "scripts": {
-    "lint": "tsc --noEmit",
+    "tsc": "tsc --noEmit",
     "storybook": "start-storybook"
   },
   "dependencies": {
