--- a/package.json
+++ b/package.json
@@ -16,11 +16,9 @@
   "devDependencies": {
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.3.3",
-    "@storybook/preact": "^5.1.10",
     "@storybook/react": "^5.1.10",
     "@types/react": "^16.2.0",
     "@types/react-dom": "^16.2.0",
-    "@types/storybook__preact": "^5.2.0",
     "@types/storybook__react": "^4.0.2",
     "@typescript-eslint/eslint-plugin": "^1.13.0",
     "@typescript-eslint/parser": "^1.13.0",
@@ -31,6 +29,7 @@
     "eslint-config-airbnb": "^18.0.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-react": "^7.14.3",
+    "preact-compat": "^3.19.0",
     "storybook": "^1.0.0",
     "typescript": "^3.5.3",
     "webpack": "^4.39.1",
